add codacy module